[package]
name = "debug-online"
version = "0.1.0"
description = "debug.online — IT toolkit, native Linux build"
authors = ["debug.online"]
edition = "2021"

[lib]
name = "debug_online_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time"] }
hickory-resolver = { version = "0.24", default-features = false, features = ["tokio-runtime", "system-config"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pki-types = "1"
webpki-roots = "0.26"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
x509-parser = "0.16"
thiserror = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
